2006-01-17  Bruno coudoin  <bruno.coudoin@free.fr>

	- Improved letters icons in crane
	- Removed a memory leak in crane related to pixmaps not freed
	- added a dialog box when gnucap is not found / or spawn fails
	- added help in electric.xml.in
	
	* boards/awele.xml.in:
	* boards/crane/arrow_down.png:
	* boards/crane/arrow_left.png:
	* boards/crane/arrow_right.png:
	* boards/crane/arrow_up.png:
	* boards/crane/letter-a.png:
	* boards/crane/letter-b.png:
	* boards/crane/letter-c.png:
	* boards/electric.xml.in:
	* src/boards/crane.c: (draw_arrow), (place_item):
	* src/boards/python/electric.py:
	* src/boards/python/tuxpaint.py:

2006-01-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Implemented a short circuit feedback by changing the battery
	image to a dead battery (should be improved).

	* boards/electric/battery_dead.png:
	* src/boards/python/electric.py:

2006-01-13  Bruno coudoin  <bruno.coudoin@free.fr>

	Reviewed crane drawing, the arrow used to control
	the crane are now bigger.

	* boards/crane/arrow_b.png:
	* boards/crane/arrow_l.png:
	* boards/crane/arrow_r.png:
	* boards/crane/arrow_u.png:
	* boards/crane/crane-bg.png:
	* src/boards/crane.c:

2006-01-13  Bruno coudoin  <bruno.coudoin@free.fr>

	Bulb is smaller now

	* boards/electric/bulb1.png:
	* boards/electric/bulb10.png:
	* boards/electric/bulb11.png:
	* boards/electric/bulb12.png:
	* boards/electric/bulb2.png:
	* boards/electric/bulb3.png:
	* boards/electric/bulb4.png:
	* boards/electric/bulb5.png:
	* boards/electric/bulb6.png:
	* boards/electric/bulb7.png:
	* boards/electric/bulb8.png:
	* boards/electric/bulb9.png:
	* src/boards/python/electric.py:

2006-01-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Many component are smaller now.
	More will follow.

	* boards/electric/battery.png:
	* boards/electric/diode.png:
	* boards/electric/resistor.png:
	* boards/electric/resistor_track.png:
	* boards/electric/resistor_wiper.png:
	* src/boards/python/electric.py:
