@@ -13,7 +13,11 @@
         <_prerequisite>Need some basic understanding on the electricity concept.</_prerequisite>
         <_goal>Freely create an electric schema with a real time simulation of it.</_goal>
         <_credit>GCompris uses the Gnucap electric simulator as a backend (&lt;http://geda.seul.org/tools/gnucap/&gt;)</_credit>
-        <_manual>Drag electrical component from the selector and drop them on the working area. Create wires by clicking on a connection spot and dropping on another one. You can move components by dragging them. You can delete wires by clicking on them. To delete a component, select the deletion tool on the top of the component selector. The simulation is updated in real time on any user action.</_manual>
+        <_manual>Drag electrical component from the selector and drop them on the working area. Create wires by clicking on a connection spot and dropping on another one. You can move components by dragging them. You can delete wires by clicking on them. To delete a component, select the deletion tool on the top of the component selector.
+You can click on the switch to open and close it.
+You can change the rheostat value by dragging it's wiper.
+In order to simulate what happens when a bulb is blown, you can blown it by right clicking on it.
+The simulation is updated in real time on any user action.</_manual>
   </Board>
   <Data directory=""/>
 </GCompris>
